--- a/md/es/01.md
+++ b/md/es/01.md
@@ -1,9 +1,12 @@
-# Primeros pasos con Scala
+# Introduction to WordPress
 
 <div style="text-align: right">
 <a target="_blank" href="slides/01.html"><img src="../../img/diapositivas.png" width="32" /></a>&nbsp;&nbsp;
 <a target="_blank" href="01.pdf"><img src="../../img/pdf.png" width="32" /></a>
 </div>
+
+WordPress is an open source content management system (CMS), which means that anyone can freely use, modify, and distribute it.
+
 
 Scala es un lenguaje de programación relativamente reciente (creado en 2003) que permite trabajar bajo varios paradigmas, aunque está especialmente enfocado a la programación funcional. Es compatible con la máquina virtual de Java, donde se ejecuta, y comparte con Java algunas características de sintaxis (aunque no otras).
 
