--- a/md/es/01.md
+++ b/md/es/01.md
@@ -5,21 +5,23 @@
 <a target="_blank" href="01.pdf"><img src="../../img/pdf.png" width="32" /></a>
 </div>
 
-WordPress is an open source content management system (CMS), which means that anyone can freely use, modify, and distribute it. It was released in 2003 with the aim of facilitating the creation of any type of web page, from blogs to business websites, online stores, digital newspapers, etc.
+WordPress is an open source Content Management System (CMS). A CMS is a software application that allows users to create, manage, and modify digital content on a website without requiring advanced technical knowledge. It separates the design and structure of a website from its content, making it easier to update and maintain. It enables multiple users to collaborate on content creation.
 
-Its main characteristics are the following:
-* Intuitive content management
-* Wide variety of customizable themes and layouts
-* Availability of plugins to add additional functionality
-* Built-in SEO optimization
-* Mobile adaptability
-* Active user community and support.
+By using a CMS, businesses and individuals can efficiently manage their online presence, publish new content regularly, and keep their websites up to date. Popular CMS platforms include WordPress, Joomla, Drupal, and Magento, each with its own strengths and specialties.
 
-We can consult more information on its [official website]()
-
+In this course we are going to focus on WordPress. It was released in 2003 and it allows the creation of any type of web page, from blogs to business websites, online stores, digital newspapers, etc.
 
 ## 1. What is WordPress?
 
+Its main characteristics are the following:
+* **Intuitive content management:** WordPress makes it easy to create, edit, and publish content. Allows you to organize content into categories and tags, making it easy to navigate and search for information.
+* **Wide variety of customizable themes and layouts:** It offers a wide selection of predefined and customizable themes, which allow you to easily change the visual appearance of a website. In addition, it is possible to customize the themes and design custom pages using visual editors and customization tools.
+* **Availability of plugins to add additional functionality:** WordPress has a wide variety of plugins that extend its functionality. These plugins allow you to add features such as contact forms, image galleries, integration with social networks, SEO optimization, security, etc.
+* **SEO and search engine optimization:** WordPress includes features that facilitate search engine optimization (SEO). It allows you to customize key elements, such as metadata, tags and permalinks, to improve visibility and positioning in search results.
+* **Mobile adaptability:** WordPress themes and layouts are designed to adapt to different screen sizes, ensuring an optimal browsing experience on both desktop and mobile devices.
+* **Active user community and support:** WordPress has an active community of users and developers who share knowledge, resources, and provide technical support. This makes it easy to find answers to questions, troubleshoot, and access additional resources.
+
+These are just some of the main features of WordPress, but the platform offers more functionality and customization possibilities, making it a popular choice for building websites of different types and sizes.
 
 
 ## 2. WordPress.com y WordPress.org.
