--- a/md/es/01.md
+++ b/md/es/01.md
@@ -5,13 +5,14 @@
 <a target="_blank" href="01.pdf"><img src="../../img/pdf.png" width="32" /></a>
 </div>
 
-WordPress is an open source Content Management System (CMS). A CMS is a software application that allows users to create, manage, and modify digital content on a website without requiring advanced technical knowledge. It separates the design and structure of a website from its content, making it easier to update and maintain. It enables multiple users to collaborate on content creation.
+WordPress is an open source **Content Management System** *(CMS)*. A **CMS** is a software application that allows users to create, manage, and modify digital content on a website without requiring advanced technical knowledge. It separates the design and structure of a website from its content, making it easier to update and maintain. 
 
-By using a CMS, businesses and individuals can efficiently manage their online presence, publish new content regularly, and keep their websites up to date. Popular CMS platforms include WordPress, Joomla, Drupal, and Magento, each with its own strengths and specialties.
-
-In this course we are going to focus on WordPress. It was released in 2003 and it allows the creation of any type of web page, from blogs to business websites, online stores, digital newspapers, etc.
+Popular CMS platforms include *WordPress*, *Joomla*, *Drupal* and *Magento*, each with its own strengths and specialties. In this course we are going to focus on *WordPress*. 
 
 ## 1. What is WordPress?
+
+WordPress is a popular CMS, which was released in 2003 and it allows the creation of any type of web page, from blogs to business websites, online stores, digital newspapers, etc. 
+It also enables multiple users to collaborate on content creation.
 
 Its main characteristics are the following:
 * **Intuitive content management:** WordPress makes it easy to create, edit, and publish content. Allows you to organize content into categories and tags, making it easy to navigate and search for information.
