--- a/md/es/01.md
+++ b/md/es/01.md
@@ -11,19 +11,17 @@ Popular CMS platforms include *WordPress*, *Joomla*, *Drupal* and *Magento*, eac
 
 ## 1. What is WordPress?
 
-WordPress is a popular CMS, which was released in 2003 and it allows the creation of any type of web page, from blogs to business websites, online stores, digital newspapers, etc. 
-It also enables multiple users to collaborate on content creation.
+WordPress is a web publishing system based on posts sorted by date; entries correspond to one or more categories or taxonomies. It was released in 2003 and it is focused on the creation of any type of web page. Originally it reached great popularity in the creation of blogs, to later become one of the main tools for the creation of commercial web pages.  
 
 Its main characteristics are the following:
-* **Intuitive content management:** WordPress makes it easy to create, edit, and publish content. Allows you to organize content into categories and tags, making it easy to navigate and search for information.
+* **Intuitive content management:** WordPress makes it easy to create, edit, and publish content. Allows you to organize content into categories and tags, making it easy to navigate and search for information. It also enables multiple users to collaborate on content creation. 
 * **Wide variety of customizable themes and layouts:** It offers a wide selection of predefined and customizable themes, which allow you to easily change the visual appearance of a website. In addition, it is possible to customize the themes and design custom pages using visual editors and customization tools.
 * **Availability of plugins to add additional functionality:** WordPress has a wide variety of plugins that extend its functionality. These plugins allow you to add features such as contact forms, image galleries, integration with social networks, SEO optimization, security, etc.
 * **SEO and search engine optimization:** WordPress includes features that facilitate search engine optimization (SEO). It allows you to customize key elements, such as metadata, tags and permalinks, to improve visibility and positioning in search results.
-* **Mobile adaptability:** WordPress themes and layouts are designed to adapt to different screen sizes, ensuring an optimal browsing experience on both desktop and mobile devices.
+* **Mobile adaptability:** WordPress themes and layouts are designed to adapt to different screen sizes, ensuring an optimal browsing experience on both desktop and mobile devices.* 
 * **Active user community and support:** WordPress has an active community of users and developers who share knowledge, resources, and provide technical support. This makes it easy to find answers to questions, troubleshoot, and access additional resources.
 
 These are just some of the main features of WordPress, but the platform offers more functionality and customization possibilities, making it a popular choice for building websites of different types and sizes.
-
 
 ## 2. WordPress.com y WordPress.org.
 
