--- a/md/es/01.md
+++ b/md/es/01.md
@@ -21,7 +21,9 @@ Its main characteristics are the following:
 * **Mobile adaptability:** WordPress themes and layouts are designed to adapt to different screen sizes, ensuring an optimal browsing experience on both desktop and mobile devices. 
 * **Active user community and support:** WordPress has an active community of users and developers who share knowledge, resources, and provide technical support. This makes it easy to find answers to questions, troubleshoot, and access additional resources.
 
-These are just some of the main features of WordPress, but the platform offers more functionality and customization possibilities, making it a popular choice for building websites of different types and sizes.
+These are just some of the main features of WordPress, but the platform offers more functionality and customization possibilities, making it a popular choice for building websites of different types and sizes. 
+
+The latest version of **WordPress is 6.2.2**. If you want to know the latest version available I recommend you visit the [official page](https://wordpress.org/download/releases/)
 
 ## 2. WordPress.com y WordPress.org.
 
@@ -29,7 +31,7 @@ WordPress allows us to host a site in two ways, [WordPress.com](https://wordpres
 * **WordPress.com** is an online platform that provides free web hosting and makes it easy to build websites without the need for advanced technical knowledge. However, it has limitations in terms of customization and functionality.
 * **WordPress.org** is the official WordPress site, where you can download the WordPress software for free and use it on your own web server. It offers more flexibility and control over the website, allowing for more advanced functionality and customization.
 
-In this section we will focus on the second option. We will see how to download and install it to create our own CMS server and manage it.
+In this course we will focus on the second option. We will see how to download and install it to create our own CMS server and manage it.
 
 ## 3. Websites created with WordPress
 
