--- a/md/es/02.md
+++ b/md/es/02.md
@@ -42,7 +42,7 @@ Before installing Wordpress, you must buy a domain on a server or service hostin
 
 [Trinchera DEV](https://trincheradev.com/) offers free hosting for WordPress pages. Free accounts have the following limitations:
 * Each user can only create one WordPress site
-* Each site has a maximum space of 500mb
+* Each site has a maximum space of 512MB
 * Each site has a MySQL database
 * PHP memory limit is 128Mb for each site
 
@@ -54,7 +54,26 @@ Create your free account by access the [registration page](https://trincheradev.
     <img src="../../img/trincheradev_register.png" width="60%">
 </div>
 
-To finish the process, you must confirm the registration from a link that will be sent to the email that you have indicated in the registration form.
+To finish the process, you must confirm the registration from a link that will be sent to the email that you have indicated in the registration form. 
+
+#### Create a site on Trinchera DEV
+
+Once you have completed the registration successfully, log in and click on the **`Create a site`** option and follow these steps:
+
+1. Enter a **title** and **name** for your website.
+   
+<div align="center">
+    <img src="../../img/trincheradev_create_a_site.png" width="80%">
+</div>
+
+2. Click on the **`Show advanced options`** button. There you can choose between a *clean install* and a *guided installation*. In the clean install you can upload your files via FTP and in the guided installation you can follow a step-by-step process and choose the plugins, theme, and other options you want to install. In this case, we are going to perform a **clean installation**.
+
+<div align="center">
+    <img src="../../img/trincheradev_clean_installation.png" width="60%">
+</div>
+
+
+
 
 ### Step 1: Download from Wordpress and upload to the server
 
