crear sitio en trinchera dev

--- a/md/es/02.md
+++ b/md/es/02.md
@@ -18,7 +18,7 @@ There are several ways to install WordPress, depending on your needs and prefere
 
 Indicar qué instalación se va a usar. 
 
-## 1. Installation process
+## 2. Installation process
 
 Before installing WordPress, you need to check that your web hosting provider fulfills the necessary software and conditions. Also, you must have access to the server and some tools.
 
@@ -34,11 +34,11 @@ Before installing WordPress, you need to check that your web hosting provider fu
 * Your web browser of choice
 
 
-### Step 0: Domain purchase, hosting and requirements
+### 2.1 Domain purchase, hosting and requirements
 
 Before installing Wordpress, you must buy a domain on a server or service hosting (that allows PHP and MySQL). You can also install it on a local server (for example, XAMPP or similar) to test before publishing the final version on the server where you have contracted the domain. 
 
-#### Registration in Trinchera DEV
+#### 2.1.1 Registration in Trinchera DEV
 
 [Trinchera DEV](https://trincheradev.com/) offers free hosting for WordPress pages. Free accounts have the following limitations:
 * Each user can only create one WordPress site
@@ -56,7 +56,7 @@ Create your free account by access the [registration page](https://trincheradev.
 
 To finish the process, you must confirm the registration from a link that will be sent to the email that you have indicated in the registration form. 
 
-#### Create a site on Trinchera DEV
+#### 2.1.2 Create a site on Trinchera DEV
 
 Once you have completed the registration successfully, log in and click on the **`Create a site`** option and follow these steps:
 
@@ -66,16 +66,42 @@ Once you have completed the registration successfully, log in and click on the *
     <img src="../../img/trincheradev_create_a_site.png" width="80%">
 </div>
 
-2. Click on the **`Show advanced options`** button. There you can choose between a *clean install* and a *guided installation*. In the clean install you can upload your files via FTP and in the guided installation you can follow a step-by-step process and choose the plugins, theme, and other options you want to install. In this case, we are going to perform a **clean installation**.
+2. Click on the **`Show advanced options`** button. There you can choose between a *clean install* and a *guided installation*. In the clean install you can upload your files via FTP and in the guided installation you can follow a step-by-step process and choose the plugins, theme, and other options you want to install. In this case, we are going to perform a **clean installation**. To do this, uncheck the **`Install WordPress`** option from the *advanced options* and 
 
 <div align="center">
     <img src="../../img/trincheradev_clean_installation.png" width="60%">
+</div>   
+
+3. Press the **`Create site`** button to finish. This process may take a few minutes.
+   
+<div align="center">
+    <img src="../../img/trincheradev_creating_site.png" width="60%">
 </div>
 
+4. You can view your site by clicking on **`Sites`** from the menu on the left. Here appears information about the site such as its name, the server, its status, its creation date and a drop-down button with the actions that we can perform on the site.
+   
+<div align="center">
+    <img src="../../img/trincheradev_sitiosinstalados.png" width="70%">
+</div>
 
+The actions you can perform are the following:
 
+* **Information:** provides basic details about your site such as the name, URL, status, mysql user, and more. 
+* **Open site:** by clicking on this option, your WordPress main page will open in a new browser tab. 
+* **Open WP-Admin:** this option takes you to the WordPress administration panel (WP-Admin) of your site. It's the place where you can perform management tasks, add content, install themes and plugins, configure settings, and more.
+* **Correct permissions:** sometimes, file and directory permissions may not be configured correctly. This option helps you correct the necessary file and directory permissions for WordPress to work properly.
+* **Create and download Ai1 Backup:** allows you to create and download a complete backup of your website. The backup includes all files, the database, and the WordPress configuration. It's a good practice to regularly back up your site to protect it from potential data loss.
+* **Migrate WordPress to Arsys:**  enables you to migrate your WordPress site from Trinchera Dev to Arsys, another hosting provider. It helps you move your site from one environment to another without losing important data or settings.
+* **Search and replace:** sometimes, you may need to search and replace specific texts or links on your WordPress website. This option allows you to efficiently make changes throughout your site's content, avoiding the need to manually edit each page or post.
+* **Change WordPress user passwords:** with this option, you can change the passwords of the users on your WordPress site. It's useful if you forget your password or if you want to update it for security reasons.
+* **Pause site:** allows you to temporarily put your site in maintenance mode. It displays a *'Site under maintenance'* page to visitors and allows you to perform updates or changes without users seeing the modifications in real-time.
+* **Notes:** you can add notes or comments for yourself or other site administrators. You can use it to document relevant information, keep track of changes made, or provide additional instructions for site maintenance.
+* **Disk space used:** shows the disk space used by your website on Trinchera Dev. It can be useful for monitoring your site's size and ensuring that it doesn't exceed the storage limits provided by your hosting provider.
+* **Delete:** this action will delete all files and the associated database of the site, so make sure to have backups before performing this operation.
 
-### Step 1: Download from Wordpress and upload to the server
+If you click on the *`Open site`* action, nothing will appear. If you click on the *`Open WP-Admin`* action, you will see an error message like this: *"Not Found. The requested URL /wp-admin was not found on this server"*. This happens because you haven't downloaded WordPress or uploaded it via FTP to Trinchera DEV yet. We will see this in the next section.
+
+### 2.2 Download from Wordpress and upload to the server
 
 Download and unzip the WordPress package from [`wordpress.org/download/`](https://wordpress.org/download/).
 
@@ -84,10 +110,10 @@ Download and unzip the WordPress package from [`wordpress.org/download/`](https:
 </div>
 
 
-### Step 2: Creating the database
+### 2.3 Creating the database
 
-### Step 3: Start the wizard
+### 2.4 Start the wizard
 
-## 2. Basic configuration
+## 3. Basic configuration
 
 
